# sirinx-co

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AGENTS_SOURCE_INTEGRITY.md  AGENT_TEAM_PLAN.md  ALL_DEVICE_TOPOLOGY.md  ALPHA_VERIFICATION_REPORT.md  BRAIN_DNA_IMPORT_RULES.md  CLOUDFLARE_ACCESS_POLICY.md  CLOUDFLARE_EDGE_PLAN.md  CLOUDFLARE_REAL_READINESS_REPORT.md  CODEX_HANDOFF.md  CODEX_WORK_REPORT.md  Cargo.toml  DEPLOY_RUST.md  Dockerfile  EMERGENCY_STOP_RUNBOOK.md  GO_LIVE_GATE_CHECKLIST.md  HERMES_AUTOPILOT_STATUS.md  INTEGRATION_MAP.md  LICENSE  MAC_CONTROL_PLANE.md  MAC_HANDOFF_CHECKLIST.md  MAC_TCC_PERMISSIONS.md  MASTER_PLAN.md  MIGRATION_SEQUENCE.md  MOBILE_COMMAND_CENTER_SCHEMA.md  MONOREPO_TARGET_TREE.md  NETWORK_PORT_MAP.md  NEXT_ACTIONS.md  NODE_HEARTBEAT_SCHEMA.md  NODE_TOPOLOGY.md  PRODUCTION.md  PROJECT_STATE.md  PUBLIC_WEBSITE_GO_LIVE_CHECKLIST.md  README.md  RELEASE_GATE.md  REPO_AUDIT_AND_MERGE_MAP.md  RUST_MIGRATION_PLAN.md  (+16 more)
.ai/: constitution.md
.ai/context/: project.md
.claude/: settings.local.json.bak-20260724-164103-recovery-dormant
.claude/agents/: kai-customer-liaison.md  ronin-l1-perception-lead.md  ronin-l2-analysis-lead.md  ronin-l3-decision-lead.md  ronin-l4-coordination-lead.md  ronin-l5-research-lead.md
.codex/: instructions.md
.codex/agents/: analyst.toml  architect.toml  code-reviewer.toml  code-simplifier.toml  critic.toml  debugger.toml  dependency-expert.toml  designer.toml  executor.toml  git-master.toml  planner.toml  prometheus-strict-metis.toml  prometheus-strict-momus.toml  prometheus-strict-oracle.toml  researcher.toml  scholastic.toml  team-executor.toml  test-engineer.toml  verifier.toml  vision.toml  writer.toml
.github/workflows/: ci.yml
.hermes/: agent-roles.md  approval-log.md  context.md  decision-log.md  report.md  risk-register.md  state.json
.mcp.local/: slayer-mcp-runbook.md  slayer-mcp.json  testsprite-mcp.json
.opencode/agents/: projectread.md
apps/dev-dashboard/: package.json  server.mjs
apps/mobile-command/: README.md
apps/public-web/: ORCHESTRATION_SCHEMA.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
asyncapi/: line-secretary.yaml
config/agent-runtime/: action-circuits.plan-only.v1.json  b10-compatibility-surfaces.plan-only.v1.json  background-tasks.plan-only.v1.json  durable-authority-unavailable.v1.json  (+7 more)
crates/sirinx-a2a/: Cargo.toml
crates/sirinx-a2a/src/: lib.rs
crates/sirinx-agents/: Cargo.toml
crates/sirinx-agents/data/: ronin-role-registry.v1.json
crates/sirinx-agents/src/: agent.rs  bus.rs  fb_group.rs  layer.rs  lib.rs  line_events.rs  partner_referral.rs  role_registry.rs  ronin.rs  roster.rs  scorer_round_the_clock.rs  scorer_sme.rs
crates/sirinx-autoloop/: Cargo.toml
crates/sirinx-autoloop/src/: codex_bridge.rs  goal.rs  lib.rs  loop_runner.rs  recovery.rs  tool.rs
crates/sirinx-control/: Cargo.toml
crates/sirinx-control/src/: lib.rs  main.rs
crates/sirinx-core/: Cargo.toml
crates/sirinx-core/src/: agent_runtime.rs  analytics.rs  control.rs  effect_authority.rs  gate.rs  lead.rs  lib.rs  package.rs  recovery.rs  work.rs
crates/sirinx-roi/: Cargo.toml
crates/sirinx-roi/src/: lib.rs
crates/sirinx-store/: Cargo.toml
crates/sirinx-store/migrations/: 0001_web_leads_and_events.sql  0002_pending_work.sql  0003_control_gates.sql  0003_gates_and_learning.sql  0004_failure_lessons.sql  0004_pending_work_completion.sql  0005_agent_cards.sql  0005_agent_runtime_core.sql  0006_agent_runtime_runtime_access.sql
crates/sirinx-store/src/: agent_runtime.rs  lib.rs  memory.rs  postgres.rs
crates/sirinx-store/tests/: agent_runtime_rls.rs  postgres.rs
crates/sirinx-store/tests/fixtures/: agent_runtime_roles.sql
crates/sirinx-web/: Cargo.toml
crates/sirinx-web/src/: lib.rs  main.rs
crates/sirinx-web/static/: index.html  thaimart-sirinx.html
crates/sirinx-web/tests/: api.rs
docs/: 00-project-brief.md  01-requirements.md  02-design-direction.md  03-technical-spec.md  04-implementation-plan.md  05-qa-checklist.md  06-release-report.md  ADAPTIVE_SYNC_PC_NODE.md  B3_ROUTE_INVENTORY_DIFF.md  NEXT_PHASE_EXECUTION_PLAN.md  OPENCODE_LINE_OFFICIAL_MCP.md  PIPELINE_AUDIT_RUNBOOK.md  RONIN_ROSTER.md  SIRINX_PUBLIC_WEB_SOURCE_RECOVERY_20260707.md  TELEGRAM_CONTROL_PLANE.md  VIBECODING_READY_MONOREPO.md  guidance-schema.md
exports/: adaptive-sync-plan-latest.json  telegram-preview-latest.json
memory/: CHAT_SYSTEM_INGEST_MANIFEST.md
openapi/: line-secretary.yaml
policies/: hermes-3-agent-operating-model.v1.json  obsidian_brain_sync.yaml
public/: index.html
scripts/: a2a-handshake.sh  adaptive-sync-plan.mjs  agents-mux.sh  fix-codex-remote.sh  mac-revoke-tcc.sh  pipeline-audit.mjs  preview-all-project-goal-autoloop.mjs  restore-public-web-from-sirinx.mjs  run-all-project-goal-autoloop-dry-run.mjs  telegram-notify-preview.mjs  telegram-operator-preflight.mjs  telegram-stack-manager.mjs  test-agent-runtime-postgres.sh  validate-b10-compatibility-surfaces.mjs  validate-b10-compatibility-surfaces.test.mjs  validate-b3-route-inventory.mjs  validate-b3-route-inventory.test.mjs  validate-existing-component-provenance.mjs  validate-existing-component-provenance.test.mjs  validate-external-component-intake.mjs  validate-external-component-intake.test.mjs  validate-ronin-role-registry.mjs  validate-ronin-role-registry.test.mjs  verify-all-project-autoloop-runtime-report.mjs  verify-all-project-execution-backlog.mjs  verify-all-project-goal-autoloop.mjs  verify-all-project-governance-ledger.mjs  verify-all-project-source-discovery.mjs  verify-all-project-spec-packs.mjs  verify-all-project-spec-skeletons.mjs  verify-hermes-3-agent-operating-model.mjs  verify-line-secretary-contracts.mjs  verify-next-phase.mjs  verify-p092-agentloop-gates.mjs  verify-pr-mono-001.mjs  verify-public-web-dependency-layout.mjs  verify-public-web-import.mjs  verify-public-web-language-switch.mjs  verify-public-web-line-i18n.mjs  windows-drive-d-handoff.mjs
tests/: hermes-3-agent-operating-model.test.mjs  line-secretary-contracts.test.mjs
(+603 files in other folders)
