[package]
name = "sirinx-agents"
description = "47 Ronin agent framework: layers, token budgets, event bus, and layer-order enforcement"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
sirinx-core = { workspace = true }
sirinx-roi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
