[package]
name = "sirinx-agents"
description = "47 Ronin agent framework: layers, token budgets, event bus, and layer-order enforcement"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
include = [
    "src/**",
    "data/ronin-role-registry.v1.json",
]

[dependencies]
sirinx-core = { workspace = true }
sirinx-roi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
