[package]
name = "sirinx-autoloop"
description = "Autonomous agentic loop runner with tool automation and governance approval gates"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
sirinx-agents = { workspace = true }
sirinx-core = { workspace = true }
sirinx-store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
