[package]
name = "sirinx-control"
description = "Hermes control plane in Rust: release gates, approval queue, pending-work intake (hold-by-default)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
sirinx-core = { workspace = true }
sirinx-store = { workspace = true }
sirinx-a2a = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
