[package]
name = "sirinx-roi"
description = "Solar ROI pre-screening calculator ported from the Thaimart x SIRINX landing page"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
